packages/components/src/Markdown/index.module.css
.preview {
  @apply p-6 font-sans text-primary leading-5;
  text-align: -webkit-auto;

  > * {
    @apply text-primary font-sans;
  }
  h2,
  h3,
  h4,
  h5 {
    @apply font-semibold;
  }
  h1 {
    @apply font-semibold text-3xl;
  }
  ol {
    @apply list-decimal;
  }
  ul {
    @apply list-disc;
  }
  li {
    @apply text-sm;
  }
  a {
    @apply text-link-1 hover:text-link-2;
  }
  @media (max-width: 767px) {
    @apply p-4;
  }
}

.previewBaseText {
  p,
  li {
    @apply text-base;
  }
}

.previewMaxHeight {
  @apply overflow-y-scroll max-h-[12.5rem];
}

